--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,16 @@
 
     <string name="signin">로그인</string>
     <string name="success_login">로그인 성공</string>
-    <string name="failed_login">로그인 실패</string>
+    <string name="failed_login">로그인 실패:다시 시도해보세요</string>
 
     <string name="signup">회원가입</string>
     <string name="success_signup">회원가입 성공</string>
     <string name="failed_signup">회원가입 실패:아이디 중복</string>
+
+    <string name="permission1">사진 및 파일을 저장하기 위해 접근 권한이 필요합니다</string>
+    <string name="permission2">[설정] > [권한]에서 권한을 허용할 수 있습니다</string>
+
+
+
+
 </resources>
